<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.hunter.kardashevscale.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_population" />

                    <TextView
                        android:id="@+id/pop_tot_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="bottom"
                        android:text="@string/pop_string"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/pop_der_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="bottom"
                        android:text="/s"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_energy" />

                    <TextView
                        android:id="@+id/energy_tot_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="bottom"
                        android:text="@string/energy_string"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/energy_der_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="bottom"
                        android:text="/s"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_time" />

                    <TextView
                        android:id="@+id/time_year_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="bottom"
                        android:text="@string/year_string"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:gravity="bottom"
                            android:text="Day "
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/time_day_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:gravity="bottom"
                            android:text="1"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp" />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.Toolbar>


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/colorAccent"
        app:menu="@menu/drawer_menu" />


</android.support.v4.widget.DrawerLayout>